k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-docker-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-docker-example
  template:
    metadata:
      labels:
        app: kubernetes-docker-example
    spec:
      containers:
        - name: kubernetes-docker-example
          image: kubernetes-docker-example
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
