k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-docker-example
spec:
  type: NodePort
  selector:
    app: kubernetes-docker-example
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
